--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -61,7 +61,7 @@
 
     <footer>
         <div>
-            <p><b>SignSport — Подбор вида спорта по психологическому профилю</b></p>
+            <p><b>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</b></p>
         </div>
     </footer>
 
