исправлена маленькая ошибка

--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -39,7 +39,7 @@
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle_two"><i>Не знаете, какой спорт вам подойдёт? Хотите подобрать его не только по физическим показателям, но и по личностным особенностям? Тогда вы по адресу!</i></p>
     </div>
-    div class="carousel-container">
+    <div class="carousel-container">
     <button class="arrow left-arrow" id="prevBtn">‹</button>
     <div class="carousel">
       <div class="review active">Человек не ленивый, но не гиперактивный. У него достаточно сил, чтобы справляться с задачами, но не рвется слишком вперед. Делает все спокойно, в своем темпе, без резких перепадов активности и упадка сил. Он эмоционально сдержанный, но часто и много думает о себе, своих чувствах и поступках, анализирует, почему он так поступил, что чувствует и как это связано с его мировоззрением. Внешне выглядит собранным и сдержанным, однако внутренне часто сомневается. Часто в последний момент какой-то задачи может очень сильно переживать, переделать или отложить, боясь в финале ошибиться. Ориентирован на гармонию в отношениях, избегает конфликтов, проявляет эмпатию и тактичность. Он не склонен к импульсивным проявлениям чувств. Он держит их под контролем. Имеет здравый практический ум, но не стремится к лидерству или публичности. Ценит баланс, стабильность и уважение к личным границам: как своим, так и чужим.</div>
