--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,14 +100,6 @@ body {
     text-align: center;
 }
 
-.textexample{
-    margin-top: 150px;
-    color: #496F94;
-    font-size: 24px;
-    font-weight: 700;
-    margin-left: 100px;
-    text-align: left
-}
 
 /* -------------------------------------------------- */
 
@@ -331,80 +323,6 @@ footer {
   max-width: 1000px;
 }
 
-/*.upload-box {
-  background-color: #4682A9;
-  height: 300px;
-  width: 900px;
-  position: relative;
-  padding: 20px;
-  border-radius: 50px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
-
-/* Внутренняя пунктирная рамка — меньше блока 
-.upload-box::before {
-  content: '';
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
-  border: 3px dashed #223f4d;
-  border-radius: 50px; /* чуть меньше, чем у блока 
-  pointer-events: none; /* не мешает кликам 
-  z-index: 0;
-}
-*/
-
-/* Чтобы контент не наезжал на рамку — оставить padding или использовать z-index 
-.upload-box > * {
-  position: relative;
-  z-index: 1;
-}
-
-.upload-box:hover {
-  background-color: #3a6d8c; /* чуть темнее при наведении 
-}
-*/
-
-/* Иконка загрузки 
-.upload-icon {
-  width: 180px;
-  height: 180px;
-}
-*/
-/* Текст над кнопкой 
-.upload-box p {
-  color: #fffdef;
-  font-size: 20px;
-  margin: 0;
-  line-height: 1.4;
-}
-*/
-/* Кнопка "Выбрать файл" 
-.file-button {
-  background-color: #fffdef;
-  color: #305669;
-  font-weight: 700;
-  padding: 10px 20px;
-  border-radius: 8px;
-  font-size: 18px;
-  cursor: pointer;
-  transition: all 0.2s ease;
-}
-
-.file-button:hover {
-  background-color: #f0f0f0;
-  transform: translateY(-1px);
-}
-*/
-
 /* Страница анализа — блок загрузки */
 .upload-box {
     padding: 32px;
@@ -462,6 +380,17 @@ footer {
 
 /* -------------------------------------------------- */
 
+.textexample{
+    margin-top: 150px;
+    color: #496F94;
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 100px;
+    text-align: left
+}
+
+/* -------------------------------------------------- */
+
 /* ——— Контейнер всей карусели ——— */
 .carousel-container {
   display: flex;
@@ -472,6 +401,7 @@ footer {
   width: 100%;
   max-width: 1400px;
   padding: 0 15px;
+  margin-left: 250px;
 }
 
 /* ——— Сам блок карусели ——— */
@@ -485,10 +415,11 @@ footer {
   border: 1px solid #ccc;
   border-radius: 12px;
   margin-top: -100px;
+
   padding: 25px;
   box-sizing: border-box;
   background: white;
-  box-shadow: 0 6px 12px rgba(100, 170, 169, 0.35);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
 }
 
 /* ——— Каждый текст ——— */
