--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -38,7 +38,6 @@
     <div class="page">
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle_two"><i>Не знаете, какой спорт вам подойдёт? Хотите подобрать его не только по физическим показателям, но и по личностным особенностям? Тогда вы по адресу!</i></p>
-        <p class = "textexample">Примеры описаний характера человека для нейросети: </p>
     </div>
     
 
@@ -60,19 +59,19 @@
         <p><strong>Уверенность модели:</strong> <span id="confidence"></span>%</p>
         <p id="reasonText"></p>
     </div>
-
+    
+    
+    <p class="textexample">Примеры описаний характера человека для нейросети:</p>
         <div class="carousel-container">
-  <button class="arrow left-arrow" id="prevBtn">‹</button>
-  
-  <div class="carousel">
-    <div class="review active">Человек не ленивый, но не гиперактивный. У него достаточно сил, чтобы справляться с задачами, но не рвется слишком вперед. Делает все спокойно, в своем темпе, без резких перепадов активности и упадка сил. Он эмоционально сдержанный, но часто и много думает о себе, своих чувствах и поступках, анализирует, почему он так поступил, что чувствует и как это связано с его мировоззрением. Внешне выглядит собранным и сдержанным, однако внутренне часто сомневается. Часто в последний момент какой-то задачи может очень сильно переживать, переделать или отложить, боясь в финале ошибиться. Ориентирован на гармонию в отношениях, избегает конфликтов, проявляет эмпатию и тактичность. Он не склонен к импульсивным проявлениям чувств. Он держит их под контролем. Имеет здравый практический ум, но не стремится к лидерству или публичности. Ценит баланс, стабильность и уважение к личным границам: как своим, так и чужим.</div>
-    <div class="review">Человек с достаточно высокой внутренней энергией и творческим мышлением, но слабым внутренним самоконтролем. В начале задачи или какого-то либо дела он уверен, инициативен, полон идей, но по мере продвижения теряет концентрацию, истощается. Внешне выглядит, что все в порядке, человек начинает дело аккуратно, соблюдает правила. Но внутри он уже на пределе: нервничает, спешит, путается. Склонен к импульсивным действиям, очень часто не выходит у него доводить дело до конца. На данный момент можно обратить внимание, что человек эмоционально истощен, устал. Творческая натура с хаосом в голове. Склонен к эмоциональному истощению. Высокая самокритика.</div>
-    <div class="review">Человек с большим количеством жизненных сил, мотивации и потенциала для действий, но обладает глубоким перфекционизмом и тревожностью.  Он старается соответствовать ожиданиям, контролирует каждое действие. Он стремится произвести хорошее впечатление, что указывает на высокую зависимость от одобрения окружающих и стремление соответствовать социальным ожиданиям. Старается смягчить свой образ, подавлять себя, что тем самым его истощает. Очень зажатый, что тем самым истощает его. Это напряжённый человек, который делает всё как надо, но редко получает удовольствие от процесса.</div>
-    <div class="review">Человек интеллектуально развитый, является эмоционально устойчивой личностью с высоким уровнем самодисциплины и аналитического мышления. Его подход к жизни — рациональный, структурированный, ориентированный на суть. Он сразу переходит к сути дела, задачи или работы. Не действет на опрежение и импульсивно. Не стремится к похвалам и замечаниям. Внешне сдержанный, не проявляет эмоции напоказ. Он не лидер по амбициям, но лидер по качеству. На такого человека можно положиться в любой ситуации. Такой человек ценит порядок и не терпит ложь. Мыслит четко.</div>
-  </div>
-  
-  <button class="arrow right-arrow" id="nextBtn">›</button>
-</div>
+            <button class="arrow left-arrow" id="prevBtn">‹</button>
+            <div class="carousel">
+                <div class="review active">Человек не ленивый, но и не гиперактивный. У него достаточно сил, чтобы справляться с задачами, но он не спешит пытаться выполнить все сразу. Делает все спокойно, в своем темпе. Он эмоционально сдержанный, но часто и много думает о себе, своих чувствах и поступках, анализирует, почему он так поступил, что чувствует. Внешне выглядит собранным и сдержанным, однако внутренне часто сомневается и переживает. Завершая какое-то дело начинает очень сильно переживать, пытаться переделать или отложить, боясь в финале ошибиться. Предпочитает избегать конфликтов, проявляет эмпатию и тактичность. Он не склонен к импульсивным проявлениям чувств, старается держать их под контролем. Он хорошо разбирается в деле и умеет находить практичные решения, но не рвётся быть в центре внимания и не гонится за ролью лидера. Ценит стабильность и уважение к личным границам: как своим, так и чужим.</div>
+                <div class="review">Человек с достаточно высокой внутренней энергией и творческим мышлением, но слабым внутренним самоконтролем. В начале задачи или какого-то либо дела он уверен, инициативен, полон идей, но по мере продвижения теряет концентрацию, истощается. Внешне выглядит, что все в порядке, человек начинает дело аккуратно, соблюдает правила. Но внутри он уже на пределе: нервничает, спешит, путается. Склонен к импульсивным действиям, очень часто не выходит у него доводить дело до конца. На данный момент можно обратить внимание, что человек эмоционально истощен, устал. Творческая натура с хаосом в голове. Склонен к эмоциональному истощению. Высокая самокритика.</div>
+                <div class="review">Человек с большим количеством жизненных сил, мотивации и потенциала для действий, но обладает глубоким перфекционизмом и тревожностью.  Он старается соответствовать ожиданиям, контролирует каждое действие. Он стремится произвести хорошее впечатление, что указывает на высокую зависимость от одобрения окружающих и стремление соответствовать социальным ожиданиям. Старается смягчить свой образ, подавлять себя, что тем самым его истощает. Очень зажатый, что тем самым истощает его. Это напряжённый человек, который делает всё как надо, но редко получает удовольствие от процесса.</div>
+                <div class="review">Человек интеллектуально развитый, является эмоционально устойчивой личностью с высоким уровнем самодисциплины и аналитического мышления. Его подход к жизни — рациональный, структурированный, ориентированный на суть. Он сразу переходит к сути дела, задачи или работы. Не действет на опрежение и импульсивно. Не стремится к похвалам и замечаниям. Внешне сдержанный, не проявляет эмоции напоказ. Он не лидер по амбициям, но лидер по качеству. На такого человека можно положиться в любой ситуации. Такой человек ценит порядок и не терпит ложь. Мыслит четко.</div>
+            </div>
+            <button class="arrow right-arrow" id="nextBtn">›</button>
+        </div>
 
     <footer>
         <div>
