--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -60,8 +60,10 @@
         <p id="reasonText"></p>
     </div>
     
+    <div class="page2">
+        <p class="textexample">Примеры описаний характера человека для нейросети:</p>
+    </div>
     
-    <p class="textexample">Примеры описаний характера человека для нейросети:</p>
         <div class="carousel-container">
             <button class="arrow left-arrow" id="prevBtn">‹</button>
             <div class="carousel">
