Редактирование и чистка кода. пока работаем с html

--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.jpg') }}" sizes="16x16" type="image/jpeg">
@@ -42,11 +41,9 @@
     
 
     <div class="upload-box">
-        <textarea id="reportInput" placeholder="Например: Человек интровертный, спокойный, устойчив к монотонии, умеет управлять вниманием..."></textarea>
+        <textarea id="reportInput" placeholder="Напишите сюда полученную картину характера человека и узнайте - какой вид спорта ему может подойти!"></textarea>
         <br>
-        <button type="button" onclick="runAnalysis()" class="analyze-button">
-            Получить рекомендацию
-        </button>
+        <button type="button" onclick="runAnalysis()" class="analyze-button">Получить рекомендацию</button>
     </div>
 
     <!-- Место для результата -->
