--- a/templates/SignSport-1.0.html
+++ b/templates/SignSport-1.0.html
@@ -8,14 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.jpg') }}" sizes="16x16" type="image/jpeg">
 </head>
 
+<!-- Баннер -->
 <body>
-
     <div class="header">
         <div class="navigation">
             <a href="{{ url_for('home') }}">
@@ -35,7 +34,7 @@
             </ul>
         </div>
     </div>
-
+<!-- Приветсвенный текст -->
     <div class="mainpage">
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle">
@@ -43,25 +42,24 @@
         </p>
         <img src="{{ url_for('static', filename='images/fencing.png') }}" alt="fencing">
     </div>
-
+<!-- Блок с кратким описанием проекта  -->
     <div class="text">
         <p>
             Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка (то есть картину вашего характера и личности) для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.
         </p>
     </div>
-
+<!-- Этапы выполнения работы -->
     <div class="list">
         <img class="tennis" src="{{ url_for('static', filename='images/tennis.png') }}" alt="tennis">
         <p class="name">Этапы работы проекта:</p>
         <ul class="spisok">
             <li class="textspisok">Проанализировать почерк человека</li>
-            <li class="textspisok">Загрузить данные отчета в нейросеть</li>
-            <li class="textspisok">Получить долгожданный результат</li>
-            <!--<li class="textspisok">При необходимости – задать вопрос нейросети (пока в разработке)</li>-->
+            <li class="textspisok">Загрузить данные его характера в нейросеть</li>
+            <li class="textspisok">Получить долгожданный результат!</li>
             <img class="athletic" src="{{ url_for('static', filename='images/athlete.png') }}" alt="athlete">
         </ul>
     </div>
-
+<!-- Оформление кнопки для перехода на нейросеть -->
     <div class="AI">
         <img src="{{ url_for('static', filename='images/photo.png') }}" alt="mini capibara">
         <p class="AI-text">Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
