--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Баннер -->
     <div class="header">
         <div class="navigation">
             <a href="{{ url_for('home') }}">
@@ -33,13 +34,13 @@
             </ul>
         </div>
     </div>
-
+<!-- Приветсвенный текст  -->
     <div class="page">
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle_two"><i>Не знаете, какой спорт вам подойдёт? Хотите подобрать его не только по физическим показателям, но и по личностным особенностям? Тогда вы по адресу!</i></p>
     </div>
     
-
+<!-- Место для ввода характера человека -->
     <div class="upload-box">
         <textarea id="reportInput" placeholder="Напишите сюда полученную картину характера человека и узнайте - какой вид спорта ему может подойти!"></textarea>
         <br>
@@ -57,6 +58,7 @@
         <p id="reasonText"></p>
     </div>
     
+    <!-- Скрол примеров характера, чтобы провести демонстрацию -->
     <div class="page2">
         <p class="textexample">Примеры описаний характера человека для нейросети:</p>
     </div>
@@ -77,7 +79,7 @@
             <p><b>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</b></p>
         </div>
     </footer>
-
+<!-- Синхронизация с js -->
     <script src="{{ url_for('static', filename='js/analyze.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
