--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -60,7 +60,7 @@
     
     <!-- Скрол примеров характера, чтобы провести демонстрацию -->
     <div class="page2">
-        <p class="textexample">Примеры описаний характера человека для нейросети:</p>
+        <p class="textexample">Примеры описаний характера человека для программы:</p>
     </div>
     
         <div class="carousel-container">
