--- a/static/css/style.css
+++ b/static/css/style.css
@@ -407,7 +407,7 @@ footer {
 /* === ПРИМЕРЫ ХАРАКТЕРА (КАРУСЕЛЬ) === */
 
 .page2{
-    padding-bottom: -18px;
+    padding-bottom: -39px;
 }
 
 .textexample{
@@ -421,7 +421,7 @@ footer {
 
 /* -------------------------------------------------- */
 
-/* ——— Контейнер всей карусели ——— */
+/* ------ Контейнер всей карусели ---- */
 .carousel-container {
   display: flex;
   align-items: center; 
@@ -433,11 +433,23 @@ footer {
   padding: 0 15px;
 }
 
-/* ——— Сам блок карусели ——— */
+/* ------ счетчик ---- */
+
+.carousel-counter {
+  margin-top: 15px;
+  font-size: 16px;
+  color: #4682A9;
+  font-weight: 600;
+  text-align: center;
+  transition: opacity 0.2s;
+  min-width: 40px; /* чтобы цифры не "прыгали" */
+}
+
+/* ----- Сам блок карусели ----- */
 .carousel {
   width: 100%;
   max-width: 700px;
-  min-width: 70px;
+  min-width: 50px;
   height: 400px;
   position: relative;
   overflow: hidden;
