редактура главной страницы

--- a/templates/SignSport-1.0.html
+++ b/templates/SignSport-1.0.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.jpg') }}" sizes="16x16" type="image/jpeg">
 </head>
 
-<!-- Баннер -->
+<!-- Баннер сверху-->
 <body>
     <div class="header">
         <div class="navigation">
@@ -27,42 +27,46 @@
                     <a href="#" class="custom-tooltip">
                         <b>О нас</b>
                         <span class="tooltip-text">
-                            Нейросеть SignSport поможет вам выбрать подходящий для вас вид спорта, опираясь на ваш характер и личность! Загрузите данные нейросети и она предоставит вам долгожданный подробный результат!
+                            Программа SignSport поможет вам выбрать подходящий для вас вид спорта, опираясь на ваш характер и личность! Загрузите здесь на сайте данные и она предоставит вам долгожданный результат!
                         </span>
                     </a>
                 </li>
             </ul>
         </div>
     </div>
+
 <!-- Приветсвенный текст -->
     <div class="mainpage">
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle">
-            <i>Подберём подходящий для вас вид спорта не по вашей физической форме, а по личностным особенностям, который определим используя для этого анализ вашего почерка!</i>
+            <i>Подберём подходящий для вас вид спорта не по вашей физической форме, а по личностным особенностям, который определим используя для этого ваш почерк!</i>
         </p>
         <img src="{{ url_for('static', filename='images/fencing.png') }}" alt="fencing">
     </div>
+
 <!-- Блок с кратким описанием проекта  -->
     <div class="text">
         <p>
-            Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка (то есть картину вашего характера и личности) для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.
+            Программа <strong>SignSport 1.0</strong> с помощью результатов графологического анализа почерка (т. е. картину вашего характера и личности) для определения вида спорта, который подходит по вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам спорта.
         </p>
     </div>
+
 <!-- Этапы выполнения работы -->
     <div class="list">
         <img class="tennis" src="{{ url_for('static', filename='images/tennis.png') }}" alt="tennis">
         <p class="name">Этапы работы проекта:</p>
         <ul class="spisok">
             <li class="textspisok">Проанализировать почерк человека</li>
-            <li class="textspisok">Загрузить данные его характера в нейросеть</li>
+            <li class="textspisok">Загрузить данные его характера в программу</li>
             <li class="textspisok">Получить долгожданный результат!</li>
             <img class="athletic" src="{{ url_for('static', filename='images/athlete.png') }}" alt="athlete">
         </ul>
     </div>
+
 <!-- Оформление кнопки для перехода на нейросеть -->
     <div class="AI">
         <img src="{{ url_for('static', filename='images/photo.png') }}" alt="mini capibara">
-        <p class="AI-text">Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
+        <p class="AI-text">Загрузите отчёт вашего характера по почерку — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
     </div>
 
     <div class="arrow-container">
@@ -75,7 +79,7 @@
 
     <footer>
         <div>
-            <p><b>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</b></p>
+            <p><b>SignSport 1.0 — Анализ почерка для подбора вида спорта</b></p>
         </div>
     </footer>
 
